--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <title>Mon Site</title>
     </head>
     <body>
-        Enzo Mancini
+        <header>
+            <button id="button1"><label class="txt">Présentation</label></button>
+            <button id="button1"><label class="txt">Projets</label></button>
+            <button id="button1"><label class="txt">Contact</label></button>
+        </header>
     </body>
 </html>
